--- a/ks_dashboard_ninja/views/ks_dashboard_ninja_view.xml
+++ b/ks_dashboard_ninja/views/ks_dashboard_ninja_view.xml
@@ -13,26 +13,18 @@
                                 <field name="name" attrs="{'readonly':[('ks_dashboard_state','=','Locked')]}"/>
                                 <field name="ks_dashboard_menu_name" attrs="{'readonly':[('ks_dashboard_state','=','Locked')],
                                                                                          'required':[('ks_dashboard_state','!=','Locked')]}"/>
+
+                            </group>
+                            <group>
+                                <!--                                <field name="ks_dashboard_default_template"-->
+                                <!--                                       attrs="{'readonly':[('id','>', 0)], 'required':[('id','&lt;', 1)]}"-->
+                                <!--                                       options="{'no_create': True, 'no_create_edit':True, 'no_open': True}"/>-->
                                 <field name="ks_dashboard_top_menu_id"
                                        options="{'no_create': True, 'no_create_edit':True, 'no_open': True}" attrs="{'readonly':[('ks_dashboard_state','=','Locked')],
                                                                                             'required':[('ks_dashboard_state','!=','Locked')]}"/>
                                 <field name="ks_dashboard_menu_sequence"/>
                                 <field name="ks_dashboard_active"
                                        attrs="{'readonly':[('ks_dashboard_state','=','Locked')]}"/>
-                            </group>
-                            <group>
-                                <field name="ks_dashboard_default_template"
-                                       attrs="{'readonly':[('id','>', 0)], 'required':[('id','&lt;', 1)]}"
-                                       options="{'no_create': True, 'no_create_edit':True, 'no_open': True}"/>
-                                <field name="ks_set_interval"/>
-                                <field name="ks_date_filter_selection" required="1"/>
-                                <field name="ks_dashboard_start_date"
-                                       attrs="{'readonly':[('ks_date_filter_selection','!=','l_custom')], 'required':[('ks_date_filter_selection','=','l_custom')]}"/>
-                                <field name="ks_dashboard_end_date"
-                                       attrs="{'readonly':[('ks_date_filter_selection','!=','l_custom')], 'required':[('ks_date_filter_selection','=','l_custom')]}"/>
-                            </group>
-                            <group name="Group_accses">
-                                <field name="ks_dashboard_group_access" widget="many2many_tags"/>
                             </group>
                         </group>
                         <notebook>
@@ -63,6 +55,22 @@
                                         <field name="ks_domain_field_id" required="1"/>
                                     </tree>
                                 </field>
+                            </page>
+                            <page name="advance_setting" string="Advance Settings">
+                                <group>
+                                    <group>
+                                        <field name="multi_layouts"/>
+                                        <field name="ks_dashboard_group_access" widget="many2many_tags"/>
+                                    </group>
+                                    <group>
+                                        <field name="ks_date_filter_selection" required="1"/>
+                                        <field name="ks_set_interval"/>
+                                        <field name="ks_dashboard_start_date"
+                                                attrs="{'invisible':[('ks_date_filter_selection','!=','l_custom')],'required':[('ks_date_filter_selection','=','l_custom')]}"/>
+                                        <field name="ks_dashboard_end_date"
+                                               attrs="{'invisible':[('ks_date_filter_selection','!=','l_custom')],'required':[('ks_date_filter_selection','=','l_custom')]}"/>
+                                    </group>
+                                </group>
                             </page>
                         </notebook>
                     </sheet>
