--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -52,13 +52,13 @@
 								<field name="supervisor_id" readonly="1" string="Manager"/>
 								<field name="start_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="end_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
-								<field name="target_achieve" attrs="{'readonly':[('state','!=','draft')],'invisible':[('achieve','=',0)]}"/>
+								<!--<field name="target_achieve" attrs="{'readonly':[('state','!=','draft')],'invisible':[('achieve','=',0)]}"/>-->
 							</group>
 							<group>
-								<field name="target" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
+								<!--<field name="target" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="difference" readonly="1"/>
 								<field name="achieve" readonly="1"/>
-								<field name="average" readonly="1"/>
+								<field name="average" readonly="1"/>-->
 								<field name="achieve_percentage" widget="progressbar" readonly="1"/>
 								<field name="average_percentage" widget="progressbar" readonly="1"/>
 								<field name="total_points" string="Total Points" readonly="1"/>
