--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 	<data>
+		<record model="ir.ui.view" id="view_product_template_inh_sit_crm">
+			<field name="name">template.product.inherit.crm</field>
+			<field name="model">product.template</field>
+			<field name="inherit_id" ref="product.product_template_form_view"/>
+			<field name="arch" type="xml">
+				<xpath expr="//div[@name='options']" position="inside">
+					<div>
+						<field name="is_achievement"/>
+						<label for="is_achievement"/>
+					</div>
+				</xpath>
+			</field>
+		</record>
 		<record model="ir.ui.view" id="view_product_template_inh">
 			<field name="name">template.product.inherit</field>
 			<field name="model">product.template</field>
@@ -35,6 +48,7 @@
 						<button name="confirm" string="Confirm" class="oe_highlight" type="object" states="draft"/>
 						<button name="close" string="Close" class="oe_highlight" type="object" states="open"/>
 						<button name="cancel" string="Cancel" class="oe_highlight" type="object" states="open,closed"/>
+						<button name="set_draft" string="Set to draft" class="oe_highlight" type="object" states="open,closed,cancelled"/>
 						<field name="state" widget="statusbar" statusbar_visible="draft,open,closed"/>
 					</header>
 					<sheet>
@@ -47,17 +61,17 @@
 							<group>
 								<field name="sales_person_id" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}" />
 								<field name="sales_staff_id" attrs="{'readonly':[('state','!=','draft')]}" string="Staff ID"/>
-								<field name="manager_id" attrs="{'readonly':[('state','!=','draft')]}" string="Manager"/>
-								<field name="supervisor_id" attrs="{'readonly':[('state','!=','draft')]}" string="Supervisor"/>
-								<field name="start_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
-								<field name="end_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
-								<field name="target_achieve" attrs="{'readonly':[('state','!=','draft')],'invisible':[('achieve','=',0)]}"/>
+								<field name="manager_id" readonly="1" string="Sales Officer"/>
+								<field name="supervisor_id" readonly="1" string="Manager"/>
+								<!--<field name="target_achieve" attrs="{'readonly':[('state','!=','draft')],'invisible':[('achieve','=',0)]}"/>-->
 							</group>
 							<group>
-								<field name="target" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
+								<!--<field name="target" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="difference" readonly="1"/>
 								<field name="achieve" readonly="1"/>
-								<field name="average" readonly="1"/>
+								<field name="average" readonly="1"/>-->
+								<field name="start_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
+								<field name="end_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="achieve_percentage" widget="progressbar" readonly="1"/>
 								<field name="average_percentage" widget="progressbar" readonly="1"/>
 								<field name="total_points" string="Total Points" readonly="1"/>
@@ -80,11 +94,13 @@
 										<field name="achieve_quantity"/>
 										<field name="returned_quantity"/>
 										<field name="difference"/>
-										<field name="incentive_unit_product" />
-										<field name="incentive_pay" />
+										<field name="booked_quantity"/>
+										<!--<field name="incentive_unit_product" />-->
+										<!--<field name="incentive_pay" />-->
 										<field name="points_per_products" />
 										<field name="points" />
-										<field name="achieve_perc"  widget="progressbar"/>
+										<field name="achieve_perc" widget="progressbar"/>
+										<field name="booked_percentage" widget="progressbar"/>
 									</tree>
 								</field>
 							</page>
@@ -113,8 +129,8 @@
 				<tree>
 					<field name="sales_staff_id" string="Staff ID"/>
 					<field name="sales_person_id"/>
-					<field name="manager_id" string="Manager"/>
-					<field name="supervisor_id" string="Supervisor"/>
+					<field name="manager_id" string="Sales Officer"/>
+					<field name="supervisor_id" string="Manager"/>
 					<field name="start_date"/>
 					<field name="end_date"/>
 					<field name="target"/>
@@ -195,6 +211,8 @@
 					<field name="target"/>
 					<group expand="0" string="Group By">
 						<filter string="Salesperson" name="sales_person_id" domain="[]" context="{'group_by': 'sales_person_id'}"/>
+						<filter string="Batch" name="saletarget_batch_id" domain="[]" context="{'group_by': 'saletarget_batch_id'}"/>
+						<filter string="Date" name="start_date" domain="[]" context="{'group_by': 'start_date'}"/>
 					</group>
 				</search>
 			</field>
