--- a/salesperson_sales_target_app/views/sale_target_line.xml
+++ b/salesperson_sales_target_app/views/sale_target_line.xml
@@ -11,11 +11,11 @@
 							<group>
 								<field name="salesperson_employee_no"/>
 								<field name="salesperson_id" />
-								<field name="manager_id" string="Manager"/>
-								<field name="supervisor_id" string="Supervisor"/>
+								<field name="manager_id" string="Sales Officer" readonly="1"/>
+								<field name="supervisor_id" string="Manager" readonly="1"/>
 								<field name="product_id"/>
 								<field name="start_date" />
-								<field name="start_date" />
+								<field name="end_date" />
 								<field name="points_per_products" />
 								<field name="points" />
 							</group>
@@ -25,9 +25,11 @@
 								<field name="achieve_quantity"/>
 								<field name="returned_quantity"/>
 								<field name="difference"/>
-								<field name="incentive_unit_product" />
+								<field name="booked_quantity" />
+								<!--<field name="incentive_unit_product" />-->
 								<field name="achieve_perc"  widget="progressbar"/>
-								<field name="incentive_pay" />
+								<field name="booked_percentage"  widget="progressbar"/>
+								<!--<field name="incentive_pay" />-->
 							</group>
 						</group>
 					</sheet>
@@ -42,8 +44,8 @@
 				<tree>
 					<field name="salesperson_employee_no"/>
 					<field name="salesperson_id"/>
-					<field name="manager_id" string="Manager"/>
-					<field name="supervisor_id" string="Supervisor"/>
+					<field name="manager_id" string="Sales Officer" />
+					<field name="supervisor_id" string="Manager" />
 					<field name="start_date"/>
 					<field name="end_date"/>
 					<field name="product_id"/>
@@ -52,11 +54,13 @@
 					<field name="achieve_quantity"/>
 					<field name="returned_quantity"/>
 					<field name="difference"/>
-					<field name="incentive_unit_product" />
-					<field name="incentive_pay" />
+					<field name="booked_quantity" />
+					<!--					<field name="incentive_unit_product" />
+                                        <field name="incentive_pay" />-->
 					<field name="points_per_products" />
 					<field name="points" />
 					<field name="achieve_perc"  widget="progressbar"/>
+					<field name="booked_percentage"  widget="progressbar"/>
 				</tree>
 			</field>
 		</record>
