--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -72,7 +72,8 @@
 								<field name="average" readonly="1"/>-->
 								<field name="start_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
 								<field name="end_date" attrs="{'readonly':[('state','!=','draft')],'required':[('state', '=', 'draft')]}"/>
-								<field name="achieve_percentage" widget="progressbar" readonly="1"/>
+								<!--<field name="achieve_percentage" widget="progressbar" readonly="1"/>-->
+								<field name="booked_percentage" widget="progressbar" readonly="1"/>
 								<field name="average_percentage" widget="progressbar" readonly="1"/>
 								<field name="total_points" string="Total Points" readonly="1"/>
 								<field name="partner_id" invisible="1"/>
@@ -138,8 +139,9 @@
 					<field name="difference"/>
 					<field name="average"/>
 					<field name="total_points" string="Total Points" />
-					<field name="achieve_percentage" widget="progressbar" />
+					<!--<field name="achieve_percentage" widget="progressbar" />-->
 					<field name="average_percentage" widget="progressbar" />
+					<field name="booked_percentage" widget="progressbar" />
 					<field name="state"/>
 				</tree>
 			</field>
