[add projected qty]

--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -92,6 +92,7 @@
 										<field name="product_id"/>
 										<field name="target_quantity"/>
 										<field name="threshold_quantity"/>
+										<field name="projected_quantity"/>
 										<field name="achieve_quantity"/>
 										<field name="returned_quantity"/>
 										<field name="difference"/>
@@ -102,6 +103,7 @@
 										<field name="points" />
 										<field name="achieve_perc" widget="progressbar"/>
 										<field name="booked_percentage" widget="progressbar"/>
+										<field name="projected_percentage" widget="progressbar"/>
 									</tree>
 								</field>
 							</page>
